--- a/styles/details.css
+++ b/styles/details.css
@@ -4,9 +4,10 @@
 }
 
 .detail--column {
-  flex-basis: 24%;
+  flex-basis: 24.5%;
   padding: 0 2rem;
   border: 1px dotted goldenrod;
+  transition: transform 0.4s ease, box-shadow 0.3s ease;
 }
 
 .detail--column:hover {
@@ -14,7 +15,44 @@
   box-shadow: 4px 4px 8px black;
 }
 
+.assignments-container {
+  margin: 2rem;
+  padding: 1rem;
+  border: 1px dotted goldenrod;
+  transition: transform 0.4s ease, box-shadow 0.3s ease;
+}
+
 .assignments {
-  padding: 1rem 5rem;
+  flex-basis: 25%;
+  padding: 1rem 2rem;
   border: 1px dotted goldenrod;
 }
+
+.assignments-container:hover {
+  transform: translateY(-10px);
+  box-shadow: 4px 4px 8px black;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 0.5rem 0;
+  transition: transform 5.3s ease, box-shadow 0.3s ease;
+  position: relative;
+}
+
+li:hover {
+  transform: translateY(-5px);
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: rgb(247, 230, 189);
+}
+
+/* li::before {
+  content: "•";
+  position: absolute;
+  left: -1rem;
+  color: goldenrod;
+} */
